<resources>
    <string name="app_name" translatable="false">Q</string>
    <string name="title_activity_main" translatable="false">Q</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_equalizer">Equalizer</string>
    <string name="title_activity_license">OSS Licenses</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="default_device_name">This device\'s speaker</string>
    <string name="text_edit_reset">Reset</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="notification_channel_player">Player</string>
    <string name="notification_channel_description_player">Player information notification for keep player alive</string>
    <string name="notification_channel_retriever">Media Retriever</string>
    <string name="notification_channel_description_retriever">Notification for keep media retriever alive</string>
    <string name="notification_title_retriever">Retrieving media</string>
    <string name="notification_text_retriever">Remaining %d files\nSyncing library…</string>
    <string name="notification_text_retriever_with_path">Remaining %1$d files (processed %2$s/%3$s) skipped %4$d files\n%5$s left\nSyncing library…\n%6$s</string>
    <string name="notification_title_media_add">Adding media</string>
    <string name="notification_text_media_add">Adding %s…</string>
    <string name="notification_action_toggle_favorite">Toggle favorite</string>
    <string name="syncing">Syncing library…</string>
    <string name="starting">Starting sync…</string>
    <string name="progress_title_retrieve_media">@string/starting</string>
    <string name="progress_title_download_dropbox">Downloading…</string>
    <string name="loading">Loading items…</string>
    <string name="remaining">Remaining: %1$d (processed %2$s/%3$s), skipped: %4$d</string>
    <string name="remaining_files">Remaining: %1$d (processed %2$d/%3$d files), skipped: %4$d</string>
    <string name="remaining_duration">%s left</string>
    <string name="button_apply">Apply</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_export_lyric_success">Success to export the lyric</string>
    <string name="message_export_lyric_failure">Failure to export the lyric</string>
    <string name="message_attach_lyric_success">Success to link the lyric</string>
    <string name="message_attach_lyric_failure">Failure to link the lyric</string>
    <string name="message_delete_lyric_complete">Complete to delete the lyric</string>
    <string name="bottom_sheet_time_total">Total・%1$s</string>
    <string name="bottom_sheet_time_remain">Remain・-%1$s</string>
    <string name="nav_header_desc" translatable="false">: Queue oriented player</string>
    <string name="nav_category_library">Library</string>
    <string name="nav_category_others">Others</string>
    <string name="nav_artist">Artists</string>
    <string name="nav_album">Albums</string>
    <string name="nav_track">Tracks</string>
    <string name="nav_genre">Genres</string>
    <string name="nav_history">History</string>
    <string name="nav_saved_queue">Saved Queues</string>
    <string name="nav_dropbox">Dropbox</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_equalizer">Equalizer</string>
    <string name="nav_dropbox_sync">Sync with Dropbox</string>
    <string name="nav_spotify">Spotify</string>
    <string name="nav_sync">Sync library</string>
    <string name="nav_pay">Donate</string>
    <string name="nav_fortune">Fortune</string>
    <string name="nav_license">OSS Licenses</string>
    <string name="menu_search">Search</string>
    <string name="menu_daynight">Toggle theme</string>
    <string name="menu_ignore_to_false">Disable skip on multiple add</string>
    <string name="menu_ignore_to_true">Enable skip on multiple add</string>
    <string name="menu_export_lyric">Export lyric</string>
    <string name="menu_attach_lyric">Attach lyric</string>
    <string name="menu_detach_lyric">Detach lyric</string>
    <string name="menu_delete_from_device">Delete from device</string>
    <string name="menu_insert_next">Insert to next</string>
    <string name="menu_insert_last">Insert to last</string>
    <string name="menu_override">Override</string>
    <string name="menu_insert_generated_queue_next">Insert generated queue by this track to next</string>
    <string name="menu_insert_generated_queue_last">Insert generated queue by this track to last</string>
    <string name="menu_override_generated_queue">Override by generated queue by this track</string>
    <string name="menu_insert_all_simple_shuffle_next">Shuffle simply to next</string>
    <string name="menu_insert_all_simple_shuffle_last">Shuffle simply to last</string>
    <string name="menu_override_all_simple_shuffle">Shuffle simply and override</string>
    <string name="menu_insert_all_next">Insert all to next</string>
    <string name="menu_insert_all_last">Insert all to last</string>
    <string name="menu_override_all">Override with all</string>
    <string name="menu_artists_insert_all_shuffle_next">Shuffle with artists to next</string>
    <string name="menu_artists_insert_all_shuffle_last">Shuffle with artists to last</string>
    <string name="menu_artists_override_all_shuffle">Shuffle and override with artist</string>
    <string name="menu_albums_insert_all_shuffle_next">Shuffle with albums to next</string>
    <string name="menu_albums_insert_all_shuffle_last">Shuffle with albums to last</string>
    <string name="menu_albums_override_all_shuffle">Shuffle and override with albums</string>
    <string name="menu_genres_insert_all_shuffle_next">Shuffle with genres to next</string>
    <string name="menu_genres_insert_all_shuffle_last">Shuffle with genres to last</string>
    <string name="menu_genres_override_all_shuffle">Shuffle and override with genres</string>
    <string name="menu_transition_to_artist">Show artist</string>
    <string name="menu_transition_to_album">Show album</string>
    <string name="menu_edit_metadata">Edit metadata</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_ng">Cancel</string>
    <string name="dialog_prev">Prev</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_title_choose_app_theme">Select theme</string>
    <string name="dialog_desc_choose_app_theme">Select app color theme</string>
    <string name="dialog_title_choose_screen_on_launch">Select screen</string>
    <string name="dialog_desc_choose_screen_on_launch">Select screen to show on launch</string>
    <string name="dialog_title_pattern_format">Specify formatting pattern of a sentence to post</string>
    <string name="dialog_desc_pattern_format">Track name: TI\nArtist name: AR\nAlbum name: AL\nescape sequence: Wrap by \' \'\nline break: \\n</string>
    <string name="dialog_hint_pattern_format">ex: #NowPlaying TI - AR (AL)</string>
    <string name="dialog_choice_reset_shuffle">Reset shuffle</string>
    <string name="dialog_choice_album_oriented_shuffle">Album oriented shuffle</string>
    <string name="dialog_choice_artist_oriented_shuffle">Artist oriented shuffle</string>
    <string name="dialog_title_dropbox_choose_folder">Select folder</string>
    <string name="dialog_desc_dropbox_choose_folder">Select root folder of retrieving media</string>
    <string name="dialog_desc_dropbox_empty_folder">This folder is empty</string>
    <string name="dialog_title_dropbox_sync_caution">Caution</string>
    <string name="dialog_desc_dropbox_sync_caution">Dropbox sync feature will download all target tracks temporary and delete it after the task is done.\nTherefore it may take a lot of time and cause large amount of download.\nAre you sure?</string>
    <string name="dialog_switch_need_downloaded">Save to device</string>
    <string name="dialog_title_dropbox_download">Download</string>
    <string name="dialog_desc_dropbox_download">Save files into the device?</string>
    <string name="dialog_title_dropbox_sync_size">May take up storage space</string>
    <string name="dialog_desc_dropbox_sync_size">To continue syncing, at least %1$s of free space is required. Current free space is %2$s; continue downloading?</string>
    <string name="dialog_title_dropbox_sync_size_exceeded">Not enough free space</string>
    <string name="dialog_desc_dropbox_sync_size_exceeded">To continue syncing, at least %1$s of free space is required. The download cannot continue because the current free space is %2$s.</string>
    <string name="dialog_title_dropbox_invalidate_downloaded">Purge</string>
    <string name="dialog_desc_dropbox_invalidate_downloaded">Remove downloaded file from the device?</string>
    <string name="dialog_switch_desc_filter_only_favorite">Only favorites</string>
    <string name="dialog_message_enable_pause_on_current_track_end">Enable auto pause on end of current track playback?</string>
    <string name="dialog_message_save_queue">Decide the title of the saving queue</string>
    <string name="dialog_title_save_queue">Queue %d</string>
    <string name="dialog_title_saved_queue_modify">Modify saved queue</string>
    <string name="dialog_label_saved_queue_modify_title">タイトル</string>
    <string name="dialog_saved_queue_modify_switch_title">Override with current queue</string>
    <string name="content_description_folder">Folder</string>
    <string name="content_description_file">File</string>
    <string name="snackbar_message_dropbox_sync_failure">Failed to sync with Dropbox: %s</string>
    <string name="snackbar_message_save_queue_complete">Completed saving queue</string>
    <string name="spotify_title" translatable="false">Spotify</string>
    <string name="spotify_title_with_section" translatable="false">Spotify - %s</string>
    <string name="spotify_attribution" translatable="false">Spotify</string>
    <string name="spotify_tab_saved">Liked Songs</string>
    <string name="spotify_tab_playlists">Playlists</string>
    <string name="spotify_tab_recommended">Recommended by Spotify</string>
    <string name="spotify_tab_library">Library</string>
    <string name="spotify_menu_flatten">Flat view</string>
    <string name="spotify_menu_sectioned">Section view</string>
    <string name="spotify_menu_remove_from_library">Remove from library</string>
    <string name="spotify_menu_clear_library">Clear</string>
    <string name="spotify_item_album">Album</string>
    <string name="spotify_item_artist">Artist</string>
    <string name="spotify_item_playlist">Playlist</string>
    <string name="spotify_item_track_count">%d tracks</string>
    <string name="spotify_menu_track_radio">Go to song radio</string>
    <string name="spotify_menu_open" translatable="false">OPEN SPOTIFY</string>
    <string name="spotify_menu_get_free" translatable="false">GET SPOTIFY FREE</string>
    <string name="spotify_message_not_configured">Spotify client ID is not configured.\nSet SPOTIFY_CLIENT_ID in secret.properties and build the app again.</string>
    <string name="spotify_message_auth">Link your Spotify account to add Spotify tracks to the queue.\nPlaying them requires the Spotify app and a Premium subscription.\nContinue?</string>
    <string name="metadata_edit_track_name">Track name</string>
    <string name="metadata_edit_track_name_kana">Track name kana</string>
    <string name="metadata_edit_album_name">Album name</string>
    <string name="metadata_edit_album_name_kana">Album name kana</string>
    <string name="metadata_edit_artist_name">Artist name</string>
    <string name="metadata_edit_artist_name_kana">Artist name kana</string>
    <string name="metadata_edit_composer_name">Composer name</string>
    <string name="metadata_edit_composer_name_kana">Composer name kana</string>
</resources>