<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_insert_all_next"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_next" />
    <item
        android:id="@+id/menu_insert_all_last"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_last" />
    <item
        android:id="@+id/menu_override_all"
        app:showAsAction="never"
        android:title="@string/menu_override_all" />
    <item
        android:id="@+id/menu_insert_all_shuffle_next"
        app:showAsAction="never"
        android:title="@string/menu_genres_insert_all_shuffle_next" />
    <item
        android:id="@+id/menu_insert_all_shuffle_last"
        app:showAsAction="never"
        android:title="@string/menu_genres_insert_all_shuffle_last" />
    <item
        android:id="@+id/menu_override_all_shuffle"
        app:showAsAction="never"
        android:title="@string/menu_genres_override_all_shuffle" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_next"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_next" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_last"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_last" />
    <item
        android:id="@+id/menu_override_all_simple_shuffle"
        app:showAsAction="never"
        android:title="@string/menu_override_all_simple_shuffle" />
</menu>