<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_toggle_daynight"
        android:icon="@drawable/ic_daynight"
        android:title="@string/menu_daynight"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_sleep"
        android:icon="@drawable/ic_hourglass_empty"
        android:title="@string/menu_sleep"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_insert_all_next"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_next" />
    <item
        android:id="@+id/menu_insert_all_last"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_last" />
    <item
        android:id="@+id/menu_override_all"
        app:showAsAction="never"
        android:title="@string/menu_override_all" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_next"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_next" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_last"
        app:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_last" />
    <item
        android:id="@+id/menu_override_all_simple_shuffle"
        app:showAsAction="never"
        android:title="@string/menu_override_all_simple_shuffle" />
    <item
        android:id="@+id/menu_edit_metadata"
        android:title="@string/menu_edit_metadata"
        app:showAsAction="never" />
</menu>