<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_insert_all_next"
        android:showAsAction="never"
        android:title="@string/menu_insert_all_next" />
    <item
        android:id="@+id/menu_insert_all_last"
        android:showAsAction="never"
        android:title="@string/menu_insert_all_last" />
    <item
        android:id="@+id/menu_override_all"
        android:showAsAction="never"
        android:title="@string/menu_override_all" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_next"
        android:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_next" />
    <item
        android:id="@+id/menu_insert_all_simple_shuffle_last"
        android:showAsAction="never"
        android:title="@string/menu_insert_all_simple_shuffle_last" />
    <item
        android:id="@+id/menu_override_all_simple_shuffle"
        android:showAsAction="never"
        android:title="@string/menu_override_all_simple_shuffle" />
</menu>