<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_insert_all_next"
        android:title="@string/menu_insert_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_insert_all_last"
        android:title="@string/menu_insert_last"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_override_all"
        android:title="@string/menu_override"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_transition_to_artist"
        android:title="@string/menu_transition_to_artist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_transition_to_album"
        android:title="@string/menu_transition_to_album"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_track"
        android:title="@string/menu_delete_track"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_edit_metadata"
        android:title="@string/menu_edit_metadata"
        app:showAsAction="never" />
</menu>