<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/choice_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/dialog_choice_reset_shuffle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/choice_shuffle_oriented_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/dialog_choice_album_oriented_shuffle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/choice_shuffle_oriented_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/dialog_choice_artist_oriented_shuffle"
            android:textSize="16sp" />
    </LinearLayout>
</layout>