<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="initialTrackName"
            type="String" />

        <variable
            name="initialTrackNameSort"
            type="String" />

        <variable
            name="initialAlbumName"
            type="String" />

        <variable
            name="initialAlbumNameSort"
            type="String" />

        <variable
            name="initialArtistName"
            type="String" />

        <variable
            name="initialArtistNameSort"
            type="String" />

        <variable
            name="initialComposerName"
            type="String" />

        <variable
            name="initialComposerNameSort"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_track_name"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/track_name_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_track_name_kana"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/track_name" />

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_album_name"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/track_name_kana" />

            <TextView
                android:id="@+id/album_name_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_album_name_kana"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_name" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_artist_name"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_name_kana" />

            <TextView
                android:id="@+id/artist_name_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_artist_name_kana"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_name" />

            <TextView
                android:id="@+id/composer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_composer_name"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_name_kana" />

            <TextView
                android:id="@+id/composer_name_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/metadata_edit_composer_name_kana"
                android:textColor="?attr/colorTextStrong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/composer_name" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/end_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="end"
                app:constraint_referenced_ids="track_name,track_name_kana,album_name,album_name_kana,artist_name,artist_name_kana,composer_name,composer_name_kana" />

            <EditText
                android:id="@+id/input_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialTrackName}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/track_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_track_name_kana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialTrackNameSort}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/track_name_kana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_album_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialAlbumName}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/album_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_album_name_kana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialAlbumNameSort}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/album_name_kana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialArtistName}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/artist_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_artist_name_kana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialArtistNameSort}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/artist_name_kana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_composer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialComposerName}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/composer_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />

            <EditText
                android:id="@+id/input_composer_name_kana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"
                android:lines="1"
                android:text="@{initialComposerNameSort}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/composer_name_kana"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/end_barrier" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>